Bug 403466 - Default Logout Option Does not Work
Summary: Default Logout Option Does not Work
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Global Theme packages (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-21 15:09 UTC by Jonathan Riddell
Modified: 2019-01-21 20:40 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Riddell 2019-01-21 15:09:19 UTC
SUMMARY
The default logout option does not work with SDDM

STEPS TO REPRODUCE
1. System Settings -> Startup and Shutdown -> Desktop Session -> Default Leave Option -> Turn off computer
2. Right click on desktop -> Leave
3. Note that default leave option is log out

OBSERVED RESULT
log out selected!

EXPECTED RESULT
turn off computer selected!

The logout widget is plasma-workspace:lookandfeel/contents/logout/Logout.qml

The 
plasma-desktop:kcms/ksmserver/smserverconfigdlg.ui

Linux using KDE neon Dev Stable using Plasma 5.15 beta.

The what's this text for the widget says:
"Here you can choose what should happen by default when you log out. This only has meaning, if you logged in through KDM."
so I guess this has not worked for some time.
Comment 1 Pawel 2019-01-21 15:18:50 UTC
I could confirm but only with Plasma 5.14.90. Until 5.14.5 everyting was ok. So it's regresion.
Comment 2 Jonathan Riddell 2019-01-21 15:22:27 UTC
Trying this with Plasma 5.14 and it works correctly with shutdown being the default if that is the setting (although the icon is not highlighted).
Comment 3 David Edmundson 2019-01-21 19:42:20 UTC
Git commit fc2d0c4f56eb90a5d689472082074c1b5688f569 by David Edmundson.
Committed on 21/01/2019 at 19:42.
Pushed by davidedmundson into branch 'Plasma/5.15'.

Handle ShutdowntypeDefault in KSMserver legacy code

Summary:
In the ksmserver porting most code was moved to explicitly calling
logout or shutdown methods rather than a random enum.

A legacy code path remained for compatibility. This path is used by the
containmentactions, in the refactor handling of
KWorkspace::ShutdownTypeDefault was lost.
Fixed-in: 5.15.0

Test Plan:
Set different default modes
Logged out using containment actions

Reviewers: #plasma, broulik

Reviewed By: #plasma, broulik

Subscribers: ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D18435

M  +5    -2    ksmserver/logout.cpp

https://commits.kde.org/plasma-workspace/fc2d0c4f56eb90a5d689472082074c1b5688f569
Comment 4 Pawel 2019-01-21 20:32:16 UTC
It looks like with commit #fc2d0c4f56eb90a5d689472082074c1b5688f569 work ok. Thx