Handle ShutdowntypeDefault in KSMserver legacy code

Summary:
In the ksmserver porting most code was moved to explicitly calling
logout or shutdown methods rather than a random enum.

A legacy code path remained for compatibility. This path is used by the
containmentactions, in the refactor handling of
KWorkspace::ShutdownTypeDefault was lost.

BUG: 403466
Fixed-in: 5.15.0

Test Plan:
Set different default modes
Logged out using containment actions

Reviewers: #plasma, broulik

Reviewed By: #plasma, broulik

Subscribers: ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D18435